fix(side menu): background color of collapsed dropdown

--- a/core/src/components/side-menu/side-menu-vars.scss
+++ b/core/src/components/side-menu/side-menu-vars.scss
@@ -25,7 +25,7 @@
   --tds-sidebar-side-menu-single-subitem-color-active: var(--tds-grey-958);
   --tds-sidebar-side-menu-single-subitem-backgrund: var(--tds-white);
   --tds-sidebar-side-menu-single-subitem-divider: var(--tds-grey-300);
-  --tds-sidebar-side-menu-subnav-backgrund: var(--tds-white);
+  --tds-sidebar-side-menu-subnav-background: var(--tds-white);
   --tds-sidebar-side-menu-single-subitem-selected-border-color: var(--tds-blue-400);
 }
 
@@ -53,6 +53,6 @@
   --tds-sidebar-side-menu-single-subitem-color-active: var(--tds-grey-958);
   --tds-sidebar-side-menu-single-subitem-backgrund: var(--tds-grey-958);
   --tds-sidebar-side-menu-single-subitem-divider: var(--tds-grey-700);
-  --tds-sidebar-side-menu-subnav-backgrund: var(--tds-grey-800);
+  --tds-sidebar-side-menu-subnav-background: var(--tds-grey-958);
   --tds-sidebar-side-menu-single-subitem-selected-border-color: var(--tds-blue-400);
 }
